<resources>
    <string name="app_name">ECX-Grocery</string>
    <string name="emailStartIcon">Email Icon</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="home_address">Home Address</string>
    <string name="email">Email</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="by_signing_up_you_agree_to_the">By signing up, you agree to the</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="ecx">ECX</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="my_chart">My Chart</string>
    <string name="help">Help</string>
    <string name="order_history">Order History</string>
    <string name="logout">Logout</string>
    <string name="track_orders">Track Orders</string>
    <string name="super_organic">Super organic</string>
    <string name="providing_healthy">Providing Healthy</string>
    <string name="product">Product</string>
    <string name="search">Search</string>
    <string name="food_icon_for_menu">Food Icon For Menu</string>
    <string name="explore_categories">Explore Categories</string>
    <string name="view_all">View All</string>
    <string name="home_background">Home Background</string>
    <string name="horizonal_list_of_images">Horizonal List of images</string>
    <string name="onion">Onion</string>
    <string name="fresh_banana">Fresh Banana</string>
    <string name="meat">Meat</string>
    <string name="chicken">Chicken</string>
    <string name="rice">Rice</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="payment_method">Payment Method</string>
    <string name="change_password">Change Password</string>
    <string name="popular_menu">Popular Menu</string>
    <string name="intent_product">intent_product</string>
    <string name="view_product_transaction">View Product Transaction</string>

</resources>
