<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_track_order"
            android:icon="@drawable/nav_drawer_track_order"
            android:title="@string/track_orders" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/nav_drawer_edit_profile"
            android:title="@string/order_history" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_drawer_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/nav_drawer_logout"
            android:title="@string/logout" />
    </group>
</menu>
