<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/nav_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/categoriesFragment"
        android:enabled="true"
        android:icon="@drawable/nav_categories"
        android:title="@string/categories"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favouritesFragment"
        android:enabled="true"
        android:icon="@drawable/nav_love"
        android:title="@string/favourites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/nav_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>
