<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.esq.e_grocery.viewmodel.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/nav_view_color"
        tools:context=".ui.SignUpActivity">


        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/register"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="?attr/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewRegister"
            app:startIconContentDescription="@string/emailStartIcon"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                app:addTextChangedListener="@{viewModel.emailTextWatcher}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userName"
            style="?attr/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/username"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:startIconContentDescription="@string/emailStartIcon"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                app:addTextChangedListener="@{viewModel.userNameTextWatcher}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="?attr/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:endIconTint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userName"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textStyle="normal"
                app:addTextChangedListener="@{viewModel.passwordTextWatcher}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPassword"
            style="?attr/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/confirm_password"
            app:endIconMode="password_toggle"
            app:endIconTint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textStyle="normal"
                app:addTextChangedListener="@{viewModel.confirmPasswordTextWatcher}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/homeAddress"
            style="?attr/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/home_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmPassword"
            app:startIconDrawable="@drawable/ic_contact_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/homeAddressEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textStyle="normal"
                app:addTextChangedListener="@{viewModel.homeAddressTextWatcher}" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/start_up_register_bg"
            android:onClick="@{viewModel::onSignUpClicked}"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:textColor="@android:color/background_light"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/homeAddress"
            app:layout_constraintTop_toBottomOf="@+id/linearlay2"
            app:layout_constraintVertical_bias="0.2" />


        <LinearLayout
            android:id="@+id/linearlay"
            android:layout_width="339dp"
            android:layout_height="30dp"
            android:layout_marginTop="@dimen/standard_spacing"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeAddress">

            <TextView
                android:id="@+id/tvPrivacyPolicy1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_spacing"
                android:layout_marginEnd="@dimen/normal_spacing"
                android:layout_weight="1"
                android:text="@string/by_signing_up_you_agree_to_the"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homeAddress" />

            <TextView
                android:id="@+id/tvTermsOfService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_spacing"
                android:onClick="@{viewModel::onSendIntent}"
                android:text="@string/terms_of_service"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlay2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_spacing"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/linearlay"
            app:layout_constraintStart_toStartOf="@id/linearlay"
            app:layout_constraintTop_toBottomOf="@id/linearlay">

            <TextView
                android:id="@+id/tvPrivacyPolicy2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/normal_spacing"
                android:layout_weight="1"
                android:text="@string/and"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/tvPrivacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{viewModel::onSendIntent}"
                android:text="@string/privacy_policy"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/linearlay" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>