<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nav_view_color"
    tools:context=".ui.StartupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_marginStart="@dimen/normal_spacing"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/normal_spacing"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/start_up_bg" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/providing_healty"
        android:text="@string/providing_healthy"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
        android:textColor="@color/mainTextColor"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_spacing"
        android:text="@string/super_organic"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
        android:textColor="@color/mainTextColor"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_spacing"
        android:text="@string/product"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
        android:textColor="@color/mainTextColor"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/start_up_login_bg"
        android:elevation="@dimen/normal_spacing"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/start_up_register_bg"
        android:gravity="center_horizontal|center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintStart_toEndOf="@id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.3"
        app:rippleColor="@android:color/darker_gray" />

</androidx.constraintlayout.widget.ConstraintLayout>