<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.esq.e_grocery.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/nav_view_color"
        tools:context=".ui.LoginActivity">

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_marginStart="36dp"
            android:layout_marginTop="36dp"
            android:text="@string/login"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="?attr/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="32dp"
            app:endIconMode="clear_text"
            app:endIconTint="@android:color/darker_gray"
            app:helperTextTextAppearance="?attr/textAppearanceSubtitle2"
            app:helperTextTextColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewLogin"
            app:startIconContentDescription="@string/emailStartIcon"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:addTextChangedListener="@{viewModel.emailTextWatcher}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="?attr/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:endIconTint="@android:color/darker_gray"
            app:helperTextTextAppearance="?attr/textAppearanceSubtitle2"
            app:helperTextTextColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textStyle="normal"
                app:addTextChangedListener="@{viewModel.passwordTextWatcher}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{viewModel::onClickForgotPassword}"
            android:text="@string/forgot_password"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/mainTextColor"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/start_up_register_bg"
            android:onClick="@{viewModel::onLoginClicked}"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:textColor="@android:color/background_light"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/textViewForgot"
            app:layout_constraintTop_toBottomOf="@+id/underline" />

        <ImageView
            android:id="@+id/underline"
            android:layout_width="0dp"
            android:layout_height="3dp"
            app:layout_constraintEnd_toEndOf="@+id/textViewForgot"
            app:layout_constraintStart_toStartOf="@+id/textViewForgot"
            app:layout_constraintTop_toBottomOf="@+id/textViewForgot"
            app:srcCompat="@drawable/forgot_password_underline" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/registerButton"
            app:layout_constraintStart_toStartOf="@+id/registerButton"
            app:layout_constraintTop_toBottomOf="@+id/registerButton"
            app:layout_constraintVertical_bias="0.13">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_weight="1"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textViewSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_spacing"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:drawableBottom="@drawable/forgot_password_underline"
                android:drawablePadding="3dp"
                android:onClick="@{viewModel::onSendSignUpIntent}"
                android:text="@string/sign_up"
                android:textAlignment="textStart"
                android:textColor="@color/mainTextColor" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>